--- a/index.qmd
+++ b/index.qmd
@@ -1,3 +1,11 @@
+::: {style="text-align: center;"}
+![](cover.png){width="50%"}
+
+**Kerry Back, Rice University**  
+**Hong Liu, Washington University in St. Louis**  
+**Mark Loewenstein, University of Maryland**
+:::
+
 # Preface {.unnumbered}
 
 This is an incomplete and in-progress draft of a python-based introduction to derivative security pricing.  Here are some notable elements of the book:
