--- a/Chapter_BlackScholes.qmd
+++ b/Chapter_BlackScholes.qmd
@@ -21,62 +21,54 @@ In the previous chapter, we developed a general framework for derivative pricing
 
 A fundamental insight is that standard European options can be expressed as combinations of digital options. Understanding this connection provides both theoretical insight and practical computational advantages.
 
-The Black-Scholes model assumes that the underlying asset pays a constant dividend yield $q \mathrm{d} t$ (in other words the stock pays the dividend $q S_t \mathrm{d}t$) and has an ex-dividend price $S$ satisfying
+The Black-Scholes model assumes that the underlying asset pays a constant dividend yield $q \,\mathrm{d} t$ (in other words the stock pays the dividend $q S_t \,\mathrm{d}t$) and has an ex-dividend price $S$ satisfying
 
-$$\frac{\mathrm{d}S}{S} = (\mu - q) \mathrm{d}t + \sigma \mathrm{d}B$$
+$$\frac{\mathrm{d}S}{S} = (\mu - q) \,\mathrm{d}t + \sigma \,\mathrm{d}B\,.$$
 
-for a Brownian motion $B$, where $\sigma$ and $\mu$ are assumed to be constant. We also assume a constant continuously-compounded risk-free rate $r$.  In this model $\mathrm{d}S$ represents the capital gain and $q S_t \mathrm{d}t$ is the dividend portion of the return.
+for a Brownian motion $B$, where $\sigma$ and $\mu$ are assumed to be constant. We also assume a constant continuously-compounded risk-free rate $r$.  In this model, $\mathrm{d}S$ represents the capital gain and $q S_t \,\mathrm{d}t$ is the dividend portion of the return.
 
 ## Digital Options as Building Blocks
 
-Before deriving the Black-Scholes formula, we need to understand how standard options relate to digital options. A **digital option** (also called binary option) has a discontinuous payoff—it pays a fixed amount if a condition is met, zero otherwise.
+Before deriving the Black-Scholes formula, we need to understand how standard options relate to digital options. A **digital option** (also called binary option) has a discontinuous payoff — it pays a fixed amount if a condition is met and zero otherwise.
 
 #### Two Types of Digitals
 
-Consider a call option with strike $K$ and maturity $T$. Its payoff $(S_T - K)^+$ can be decomposed as:
+Consider a call option with strike $K$ and maturity $T$. Its payoff $(S_T - K)^+$ can be decomposed as
 
-$$(S_T - K)^+ = \mathbf{1}_{\{S_T > K\}} S_T - K \mathbf{1}_{\{S_T > K\}}$$
+$$(S_T - K)^+ = \mathbf{1}_{\{S_T > K\}} S_T - K \mathbf{1}_{\{S_T > K\}}\,.$$
 
 This reveals that a call option is the difference between two digital options:
 
 1. **Share digital**: Pays $S_T$ when $S_T > K$, zero otherwise
 2. **Cash digital**: Pays $K$ when $S_T > K$, zero otherwise
 
-Similarly, a put option with payoff $(K - S_T)^+$ can be written as:
+Similarly, a put option with payoff $(K - S_T)^+$ can be written as
 
-$$(K - S_T)^+ = K \mathbf{1}_{\{S_T < K\}} - \mathbf{1}_{\{S_T < K\}} S_T$$
+$$(K - S_T)^+ = K \mathbf{1}_{\{S_T < K\}} - \mathbf{1}_{\{S_T < K\}} S_T\,.$$
 
 This is $K$ cash digitals minus share digitals, both paying when $S_T < K$.
 
-#### Why This Decomposition Matters Note: Mark Hates this section
-
-This decomposition is powerful because:
-
-1. **Computational efficiency**: Digital options have closed-form expressions involving only normal probabilities
-2. **Theoretical insight**: It connects discrete payoffs to continuous probability distributions
-3. **Risk management**: Greeks can be computed directly from the normal density function
-4. **Generalization**: The approach extends to exotic options and other underlying processes
 
 ## Girsanov's Theorem in the Black-Scholes Model
 
 To value digital options, we need to understand changes of probability measures in continuous time. When we change probability measures, a process $B$ that was a Brownian motion cannot be expected to remain a Brownian motion under the new measure. However, Girsanov's Theorem tells us exactly how the drift changes.
 
-In the Black-Scholes model, the dividend-reinvested stock price, denoted $Y_t$ follows:
+In the Black-Scholes model, the dividend-reinvested stock price, denoted $Y_t$, evolves as
 
-$$\mathrm{d}Y_t = \mu Y_t \mathrm{d}t + \sigma Y_t \mathrm{d}B_t$$
+$$\mathrm{d}Y_t = \mu Y_t \,\mathrm{d}t + \sigma Y_t \,\mathrm{d}B_t\,.$$
 
-We can rewrite this as:
+We can rewrite this as
 
-$$\mathrm{d}Y_t = r Y_t \mathrm{d}t + \sigma Y_t \mathrm{d}\left(B_t + \frac{\mu - r}{\sigma}t\right)$$
+$$\mathrm{d}Y_t = r Y_t \,\mathrm{d}t + \sigma Y_t \,\mathrm{d}\left(B_t + \frac{\mu - r}{\sigma}t\right)\,.$$
 
-Define $\kappa = \frac{\mu - r}{\sigma}$, called the market price of risk or Sharpe ratio.
+Define $\kappa = \frac{\mu - r}{\sigma}$.  This is called the market price of risk or Sharpe ratio.
 
 ::: Principle
 **Girsanov's Theorem**: Define the exponential martingale:
 
-$$Z_t = \exp\left(-\frac{1}{2}\kappa^2 t - \kappa B_t\right)$$
+$$Z_t = \exp\left(-\frac{1}{2}\kappa^2 t - \kappa B_t\right)\,.$$
 
-Since $Z_T$ is lognormal, $\mathbb{E}[Z_T] = 1$. Under the probability measure defined by:
+Using the rule for expectations of lognormal variables, we can see that $\mathbb{E}[Z_T] = 1$. Under the probability measure defined by:
 
 $$\mathbb{E}^\kappa[Y] = \mathbb{E}[Z_T X]$$
 
@@ -85,20 +77,20 @@ for any function $X$ of $B_t$ ($0 \leq t \leq T$), the process $B_t^\kappa = B_t
 
 This theorem tells us how to construct the risk-neutral measure from the original measure. Using Ito's lemma, we can verify that $Z_t \frac{Y_t}{R_t}$ is indeed a martingale:
 
-$$Z_t \frac{Y_t}{R_t} = S_0 \exp\left(-\frac{1}{2}(\sigma - \kappa)^2 t + (\sigma - \kappa)B_t\right)$$
+$$Z_t \frac{Y_t}{R_t} = S_0 \exp\left(-\frac{1}{2}(\sigma - \kappa)^2 t + (\sigma - \kappa)B_t\right)\,.$$
 
 Therefore this is a lognormal random variable and taking expectations gives:
 
-$$\mathbb{E}\left[Z_t \frac{Y_t}{R_t}\right] = S_0$$
+$$\mathbb{E}\left[Z_t \frac{Y_t}{R_t}\right] = S_0\,.$$
 
 #### Dividend Reinvested Stock as Numeraire
 
 When using the stock as numeraire, we need the process $\frac{R_t}{Y_t}$ to be a martingale. Following similar analysis with Girsanov's Theorem, we find that under the stock numeraire measure:
 
-$$\mathrm{d}Y_t = (r + \sigma^2) Y_t \mathrm{d}t + \sigma V_t \mathrm{d}B_t^Y$$
+$$\mathrm{d}Y_t = (r + \sigma^2) Y_t \,\mathrm{d}t + \sigma V_t \,\mathrm{d}B_t^Y\,.$$
 
 where $B_t^Y = B_t^R - \sigma t$ is a Brownian motion under the dividend reinvested stock numeraire measure.  It then follows 
-$$\frac{R_t}{Y_t} = \frac{R_0}{S_0} \exp\left(-\frac{1}{2} \sigma^2 t - \sigma B_t^Y \right) $$
+$$\frac{R_t}{Y_t} = \frac{R_0}{S_0} \exp\left(-\frac{1}{2} \sigma^2 t - \sigma B_t^Y \right)\,, $$
 
 which is an exponential martigale.
 
@@ -110,59 +102,59 @@ Now we apply the valuation theory from Chapter 3 (Arbitrage Pricing) and the tai
 
 A cash digital option paying \$1 when $S_T > K$ has value under the risk-neutral measure:
 
-$$e^{-r(T-t)} \mathbb{E}_t^R[\mathbf{1}_{\{S_T > K\}}] = e^{-r(T-t)} \text{prob}^R(S_T > K)$$
+$$e^{-r(T-t)} \mathbb{E}_t^R[\mathbf{1}_{\{S_T > K\}}] = e^{-r(T-t)} \text{prob}^R(S_T > K)\,.$$
 
 Under the risk-neutral measure, the stock price follows:
 
-$$\frac{\mathrm{d}S}{S} = (r - q) \mathrm{d}t + \sigma \mathrm{d}B^R$$
+$$\frac{\mathrm{d}S}{S} = (r - q) \,\mathrm{d}t + \sigma \,\mathrm{d}B^R\,.$$
 
 This means:
 
-$$\mathrm{d}\log S = \left(r - q - \frac{\sigma^2}{2}\right) \mathrm{d}t + \sigma \mathrm{d}B^R$$
+$$\mathrm{d}\log S = \left(r - q - \frac{\sigma^2}{2}\right) \,\mathrm{d}t + \sigma \,\mathrm{d}B^R\,.$$
 
 From Chapter 2, we know this has the solution:
 
-$$S_T = S_t \exp\left(\left(r - q - \frac{\sigma^2}{2}\right)(T-t) + \sigma B_{T-t}^R\right) $$
+$$S_T = S_t \exp\left(\left(r - q - \frac{\sigma^2}{2}\right)(T-t) + \sigma B_{T-t}^R\right) \,.$$
 
-Applying the tail probability formula from @sec-tailprobs with $\alpha = r - q - \sigma^2/2$:
+Applying the tail probability formula from @sec-tailprobs with $\alpha = r - q - \sigma^2/2$ gives us
 
-$$\text{prob}^R(S_T > K) = N(d_2)$$
+$$\text{prob}^R(S_T > K) = N(d_2)\,,$$
 
-where:
+where
 
-$$d_2 = \frac{\log(S_t/K) + (r - q - \frac{\sigma^2}{2})(T-t)}{\sigma\sqrt{T-t}}$$
+$$d_2 = \frac{\log(S_t/K) + (r - q - \frac{\sigma^2}{2})(T-t)}{\sigma\sqrt{T-t}}\,.$$
 
 #### Share Digital Options
 
 For the share digital paying $S_T \mathbf{1}_{\{S_T > K\}}$, we use the dividend reinvested stock as numeraire.  We have 
 
-$$S_T  = e^{-q T} Y_T $$
-therefore
-$$\frac{S_T}{Y_T}  \mathbf{1}_{\{S_T > K\}} = e^{-q T}  \mathbf{1}_{\{S_T > K\}}$$
+$$S_T  = e^{-q T} Y_T\,; $$
+therefore,
+$$\frac{S_T}{Y_T}  \mathbf{1}_{\{S_T > K\}} = e^{-q T}  \mathbf{1}_{\{S_T > K\}}\,.$$
 
  From the change of numeraire theory in Chapter 3:
 
-$$\text{Value} = Y_t \mathbb{E}_t^V[e^{-q T} \mathbf{1}_{\{S_T > K\}}] = e^{-q (T-t) } S_t \cdot \text{prob}^Y(S_T > K)$$
+$$\text{Value} = Y_t \mathbb{E}_t^V[e^{-q T} \mathbf{1}_{\{S_T > K\}}] = e^{-q (T-t) } S_t \cdot \text{prob}^Y(S_T > K)\,.$$
 
 
 
-Under the stock numeraire measure:
+Under the stock numeraire measure,
 
-$$\mathrm{d}\log S = \left(r - q + \frac{\sigma^2}{2}\right) \mathrm{d}t + \sigma \mathrm{d}B^Y$$
+$$\mathrm{d}\log S = \left(r - q + \frac{\sigma^2}{2}\right) \,\mathrm{d}t + \sigma \,\mathrm{d}B^Y\,.$$
 
 Applying the tail probability formula from @sec-tailprobs with $\alpha = r - q + \sigma^2/2$:
 
-$$\text{prob}^Y(S_T > K) = N(d_1)$$
+$$\text{prob}^Y(S_T > K) = N(d_1)\,.$$
 
 where:
 
-$$d_1 = \frac{\log(S_t/K) + (r - q + \frac{\sigma^2}{2})(T-t)}{\sigma\sqrt{T-t}} = d_2 + \sigma\sqrt{T-t}$$
+$$d_1 = \frac{\log(S_t/K) + (r - q + \frac{\sigma^2}{2})(T-t)}{\sigma\sqrt{T-t}} = d_2 + \sigma\sqrt{T-t}\,.$$
 
 #### Combining the Results
 
 Now we can derive the Black-Scholes formula by combining our digital option results. A European call option has payoff:
 
-$$(S_T - K)^+ = \mathbf{1}_{\{S_T > K\}} S_T - K \mathbf{1}_{\{S_T > K\}}$$
+$$(S_T - K)^+ = \mathbf{1}_{\{S_T > K\}} S_T - K \mathbf{1}_{\{S_T > K\}}\,.$$
 
 The first term is a share digital worth $e^{-q (T-t)}S_t \cdot \text{prob}^S(S_T > K) = e^{- q (T-t)} S_t N(d_1)$.
 
@@ -182,7 +174,7 @@ This derivation shows how the fundamental arbitrage pricing theory leads directl
 ::: Rule
 The value of a European call option is:
 
-$$C(t, S_t) = e^{-q(T-t)} S_t N(d_1) - e^{-r(T-t)} K N(d_2)$$
+$$C(t, S_t) = e^{-q(T-t)} S_t N(d_1) - e^{-r(T-t)} K N(d_2)\,.$$
 
 where $d_1$ and $d_2$ are defined above and $N(\cdot)$ is the standard normal cumulative distribution function.
 :::
@@ -190,12 +182,12 @@ where $d_1$ and $d_2$ are defined above and $N(\cdot)$ is the standard normal cu
 The value of a European put option is similarily derived as an exercise :
 
 ::: Rule
-$$P(t, S_t) = e^{-r(T-t)} K N(-d_2) - e^{-q(T-t)} S_t N(-d_1)$$
+$$P(t, S_t) = e^{-r(T-t)} K N(-d_2) - e^{-q(T-t)} S_t N(-d_1)\,.$$
 :::
 
 The call and put values satisfy a put-call parity relationship:
 
-$$e^{-r(T-t)} K + C(t, S_t) = e^{-q(T-t)} S_t + P(t, S_t)$$
+$$e^{-r(T-t)} K + C(t, S_t) = e^{-q(T-t)} S_t + P(t, S_t)\,.$$
 
 
 
@@ -213,27 +205,27 @@ The following interactive tool allows you to explore how the Black-Scholes formu
 
 The Black Scholes formula can also be derived from a no-arbitrage argument since we can replicate option payoffs through dynamic trading. Following Merton's argument, we construct a portfolio holding $\delta_t$ shares of stock and $\alpha_t$ units of the risk-free asset, with value:
 
-$$W_t = \alpha_t e^{rt} + \delta_t S_t$$
+$$W_t = \alpha_t e^{rt} + \delta_t S_t\,.$$
 
 For continuous trading with no cash inflows or outflows:
 
-$$\mathrm{d}W_t = \delta_t \mathrm{d}S_t + \delta_t q S_t \mathrm{d}t + \alpha_t r e^{rt} \mathrm{d}t$$
+$$\mathrm{d}W_t = \delta_t \,\mathrm{d}S_t + \delta_t q S_t \,\mathrm{d}t + \alpha_t r e^{rt} \,\mathrm{d}t\,.$$
 
-If the option value is $C(t, S_t)$, then by Ito's lemma:
+If the option value is $C(t, S_t)$, then by Ito's lemma,
 
-$$\mathrm{d}C = \frac{\partial C}{\partial t} \mathrm{d}t + \frac{\partial C}{\partial S} \mathrm{d}S + \frac{1}{2} \frac{\partial^2 C}{\partial S^2} \sigma^2 S^2 \mathrm{d}t$$
+$$\mathrm{d}C = \frac{\partial C}{\partial t} \,\mathrm{d}t + \frac{\partial C}{\partial S} \,\mathrm{d}S + \frac{1}{2} \frac{\partial^2 C}{\partial S^2} \sigma^2 S^2 \,\mathrm{d}t\,.$$
 
-Matching the stochastic terms requires:
+Matching the stochastic terms requires
 
-$$\delta_t = \frac{\partial C}{\partial S}$$
+$$\delta_t = \frac{\partial C}{\partial S}\,.$$
 
-This is the option's delta—the number of shares needed to hedge the option. Matching the drift terms in both expressions
-$$ \frac{\partial C}{\partial S} \mu S_t + \alpha_t r R_t = \frac{\partial C}{\partial t} + \frac{\partial C}{\partial S} (\mu-q) S_t + \frac{1}{2} \frac{\partial^2 C}{\partial S^2} \sigma^2 S_t^2$$
+This is the option's delta - the number of shares needed to hedge the option. Matching the drift terms in both expressions
+$$ \frac{\partial C}{\partial S} \mu S_t + \alpha_t r R_t = \frac{\partial C}{\partial t} + \frac{\partial C}{\partial S} (\mu-q) S_t + \frac{1}{2} \frac{\partial^2 C}{\partial S^2} \sigma^2 S_t^2\,.$$
 which can be solved to give
-$$ \alpha_t r R_t=r \left(W_t -\frac{\partial C}{\partial S} S_t\right)  = \frac{\partial C}{\partial t}-\frac{\partial C}{\partial S} q S_t  + \frac{1}{2} \frac{\partial^2 C}{\partial S^2} \sigma^2 S_t^2$$
+$$ \alpha_t r R_t=r \left(W_t -\frac{\partial C}{\partial S} S_t\right)  = \frac{\partial C}{\partial t}-\frac{\partial C}{\partial S} q S_t  + \frac{1}{2} \frac{\partial^2 C}{\partial S^2} \sigma^2 S_t^2\,,$$
 which gives the equation
 $$r W_t = \frac{\partial C}{\partial t} + \frac{\partial C}{\partial S}(r-q) S_t+\frac{1}{2} \frac{\partial^2 C}{\partial S^2} \sigma^2 S_t^2$$
-with a boundary condition $W_T = (S_T-K)^{+}$.  However, no-arbitrage suggests $W_t = C(t,S_t)$ which gives us the partial differential equation
+with a boundary condition $W_T = (S_T-K)^{+}$.  However, no-arbitrage suggests $W_t = C(t,S_t)$, which gives us the partial differential equation
 $$r C = \frac{\partial C}{\partial t} + \frac{\partial C}{\partial S} (r-q) S+\frac{1}{2} \frac{\partial^2 C}{\partial S^2} \sigma^2 S^2$$
 with a boundary condition $C(T,S_T)= (S_T - K)^{+}$.  This is a partial differential equation and a fairly tedious set of calcuations show the Black Scholes formula is a solution (in fact it is the only positive solution).  Close observation of the right hand side we see this is the drift term of Ito expansion for $C$ if we work in the risk-neutral probability.  The right hand side then says in the risk-neutral probability, the call option earns the risk free return.
 
@@ -267,7 +259,7 @@ The Black-Scholes formula satisfies this PDE with the appropriate boundary condi
 Recall, that a protective put position buys a put and buys a share and the payoff at the expiration of the put is given by $\max(K,S_T)$.  The reason for the name protective put is apparent since the position can pay off no less than $K$.  The cost of this insurance is the price of the put.  However, if the put is not traded, we can synthetically replicate this payoff using the prodedure above assuming we can trade continuously.  The basic recipe is to start with inital wealth equal to that for a protective put position: $W_0 = P(0,S_0)+S_0$.  The delta of the protective put position can be calcuated to be the delta of the put plus 1 which is $N(d_1)$, where $d_1$ is calculated at each point in time.  However, in practice we cannot trade continuously.  A simple discrete strategy would rebalance at intervals $\Delta t$.  The strategy calculates $N(d_1)$ at time 0 and holds $P(0,S_0)+S_0 - N(d_1)S_0$ dollars in the risk free asset and $N(d_1)$ shares of the asset.  Thereafter these holdings are adjusted.  The change in portfolio value over the interval $\Delta t$ is 
 $$\Delta W= W_{i \Delta t}- W_{(i-1)\Delta t} $$
 $$ 
-= (P((i-1)\Delta t,S_{(i-1)\Delta t})+S_{(i-1)\Delta t} - N(d_1-)S_{(i-1)\Delta t})(R_{i\Delta t}-R_{(i-1)\Delta t}) + N(d1-)(S_{i\Delta t}-S_{(i-1)\Delta t}) 
+= (P((i-1)\Delta t,S_{(i-1)\Delta t})+S_{(i-1)\Delta t} - N(d_1-)S_{(i-1)\Delta t})(R_{i\Delta t}-R_{(i-1)\Delta t}) + N(d1-)(S_{i\Delta t}-S_{(i-1)\Delta t}) \,,
 $$
 where $N(d1-)$ is the delta chosen at time $(i-1)\Delta t$.  The question is if the Black Scoles model is correct, how accurate can a discrete rebalancing scheme be?  This is simulated in the following code:
 
@@ -411,30 +403,30 @@ The sensitivities of option values to various inputs are called Greeks. From the
 #### Delta ($\delta$)
 The sensitivity to stock price changes:
 
-$$\delta_{call} = e^{-q(T-t)} N(d_1)$$
-$$\delta_{put} = -e^{-q(T-t)} N(-d_1)$$
+$$\delta_{call} = e^{-q(T-t)} N(d_1)\,.$$
+$$\delta_{put} = -e^{-q(T-t)} N(-d_1)\,.$$
 
 #### Gamma ($\Gamma$)
 The rate of change of delta:
 
-$$\Gamma = \frac{e^{-q(T-t)} n(d_1)}{S \sigma \sqrt{T-t}}$$
+$$\Gamma = \frac{e^{-q(T-t)} n(d_1)}{S \sigma \sqrt{T-t}}\,,$$
 
 where $n(\cdot)$ is the standard normal density. Gamma is the same for calls and puts.
 
 #### Theta ($\Theta$)
 The time decay (using $\partial/\partial(-T)$ so positive theta means value increases as time passes):
 
-$$\Theta_{call} = -\frac{e^{-q(T-t)} S n(d_1) \sigma}{2\sqrt{T-t}} + q e^{-q(T-t)} S N(d_1) - r e^{-r(T-t)} K N(d_2)$$
+$$\Theta_{call} = -\frac{e^{-q(T-t)} S n(d_1) \sigma}{2\sqrt{T-t}} + q e^{-q(T-t)} S N(d_1) - r e^{-r(T-t)} K N(d_2)\,.$$
 
 #### Vega ($\mathcal{V}$)
 The sensitivity to volatility:
 
-$$\mathcal{V} = e^{-q(T-t)} S n(d_1) \sqrt{T-t}$$
+$$\mathcal{V} = e^{-q(T-t)} S n(d_1) \sqrt{T-t}\,.$$
 
 #### Rho ($\rho$)
 The sensitivity to interest rates:
 
-$$\rho_{call} = (T-t) e^{-r(T-t)} K N(d_2)$$
+$$\rho_{call} = (T-t) e^{-r(T-t)} K N(d_2)\,.$$
 
 #### Interactive Greeks Explorer
 
@@ -450,17 +442,17 @@ The Greeks measure how option prices change with respect to various parameters. 
 
 The relationship between theta and gamma provides deep insight into option hedging. Consider a delta-hedged portfolio (short call, long $\delta$ shares). From the fundamental PDE and our Greeks:
 
-$$\Theta + \frac{1}{2} \Gamma \sigma^2 S^2 = r C - (r - q) S \delta$$
+$$\Theta + \frac{1}{2} \Gamma \sigma^2 S^2 = r C - (r - q) S \delta\,.$$
 
-In continuous time, the portfolio change is:
+In continuous time, the portfolio change is
 
-$$-\Theta \mathrm{d}t - \frac{1}{2} \Gamma \sigma^2 S^2 \mathrm{d}t + q \delta S \mathrm{d}t + (C - \delta S) r \mathrm{d}t$$
+$$-\Theta \,\mathrm{d}t - \frac{1}{2} \Gamma \sigma^2 S^2 \,\mathrm{d}t + q \delta S \,\mathrm{d}t + (C - \delta S) r \,\mathrm{d}t\,.$$
 
 These terms exactly cancel—the time decay and dividends received offset losses from being short gamma and interest payments. This perfect cancellation only holds with continuous rebalancing.
 
 With discrete rebalancing, the hedge is imperfect. The portfolio is short gamma, meaning it loses money when the stock moves significantly between rebalances. This loss is approximately:
 
-$$\frac{1}{2} \Gamma (\Delta S)^2$$
+$$\frac{1}{2} \Gamma (\Delta S)^2\,,$$
 
 where $\Delta S$ is the stock price change. The hedging error increases with:
 
@@ -482,7 +474,7 @@ Consider a delta hedge that is rebalanced at discrete times $0 = t_0 < t_1 < \cd
 
 The key insight from the analysis in @sec-s_deltahedging is that perfect continuous hedging relies on the relationship:
 
-$$-\Theta \,\mathrm{d} t - \frac{1}{2}\Gamma \sigma^2S^2\,\mathrm{d} t+ q \delta S\,\mathrm{d} t+(C-\delta S)r\,\mathrm{d} t = 0$$
+$$-\Theta \,\mathrm{d} t - \frac{1}{2}\Gamma \sigma^2S^2\,\mathrm{d} t+ q \delta S\,\mathrm{d} t+(C-\delta S)r\,\mathrm{d} t = 0\,.$$
 
 With discrete rebalancing, this balance is disrupted. The portfolio gains and losses come from:
 
@@ -715,7 +707,7 @@ The smile has been particularly pronounced for equity index options since the 19
 #### Digital Options and Building Blocks
 
 ::: {#exr-digital-pricing}
-Consider a cash digital option that pays $1 when $S_T > K$ and a share digital that pays $S_T$ when $S_T > K$. Using Black-Scholes parameters $S_0 = 100$, $K = 105$, $r = 5\%$, $q = 2\%$, $\sigma = 20\%$, $T = 0.25$:
+Consider a cash digital option that pays $1 when $S_T > K$ and a share digital that pays $S_T$ when $S_T > K$. Using Black-Scholes parameters $S_0 = 100$, $K = 105$, $r = 5\%$, $q = 2\%$, $\sigma = 20\%$, $T = 0.25$.
 
 a) Calculate the analytical values of both digital options using the formulas from the chapter
 b) Verify your results using Monte Carlo simulation with 100,000 paths
@@ -724,8 +716,8 @@ d) Implement this decomposition and verify it matches the standard Black-Scholes
 :::
 
 ::: {#exr-digital-delta}
-The delta of a cash digital option that pays $1 when $S_T > K$ is:
-$$\Delta_{\text{digital}} = \frac{e^{-rT} n(d_2)}{\sigma S \sqrt{T}}$$
+The delta of a cash digital option that pays $1 when $S_T > K$ is
+$$\Delta_{\text{digital}} = \frac{e^{-rT} n(d_2)}{\sigma S \sqrt{T}}\,,$$
 
 where $n(\cdot)$ is the standard normal density.
 
@@ -739,10 +731,10 @@ d) What happens to the digital delta as time to expiration approaches zero?
 The following two questions can be answered in two ways.
 
 What is the vaule of a derivative security which pays 
-$$\mathbf{1}_{\{S_T <K\}}$$
+$$\mathbf{1}_{\{S_T <K\}}\,.$$
 
 What is the value of a derivative security which pays
-$$ S_T \mathbf{1}_{\{S_T <K\}}$$
+$$ S_T \mathbf{1}_{\{S_T <K\}}\,.$$
 
 :::
 
