--- a/Chapter_BlackScholes.qmd
+++ b/Chapter_BlackScholes.qmd
@@ -49,50 +49,8 @@ $$(K - S_T)^+ = K \mathbf{1}_{\{S_T < K\}} - \mathbf{1}_{\{S_T < K\}} S_T\,.$$
 This is $K$ cash digitals minus share digitals, both paying when $S_T < K$.
 
 
-## Girsanov's Theorem in the Black-Scholes Model
 
-To value digital options, we need to understand changes of probability measures in continuous time. When we change probability measures, a process $B$ that was a Brownian motion cannot be expected to remain a Brownian motion under the new measure. However, Girsanov's Theorem tells us exactly how the drift changes.
 
-In the Black-Scholes model, the dividend-reinvested stock price, denoted $Y_t$, evolves as
-
-$$\mathrm{d}Y_t = \mu Y_t \,\mathrm{d}t + \sigma Y_t \,\mathrm{d}B_t\,.$$
-
-We can rewrite this as
-
-$$\mathrm{d}Y_t = r Y_t \,\mathrm{d}t + \sigma Y_t \,\mathrm{d}\left(B_t + \frac{\mu - r}{\sigma}t\right)\,.$$
-
-Define $\kappa = \frac{\mu - r}{\sigma}$.  This is called the market price of risk or Sharpe ratio.
-
-::: Principle
-**Girsanov's Theorem**: Define the exponential martingale:
-
-$$Z_t = \exp\left(-\frac{1}{2}\kappa^2 t - \kappa B_t\right)\,.$$
-
-Using the rule for expectations of lognormal variables, we can see that $\mathbb{E}[Z_T] = 1$. Under the probability measure defined by:
-
-$$\mathbb{E}^\kappa[Y] = \mathbb{E}[Z_T X]$$
-
-for any function $X$ of $B_t$ ($0 \leq t \leq T$), the process $B_t^\kappa = B_t + \kappa t$ is a Brownian motion. Moreover, if $M_t$ is a martingale under the new measure, then $Z_t M_t$ is a martingale under the original measure.
-:::
-
-This theorem tells us how to construct the risk-neutral measure from the original measure. Using Ito's lemma, we can verify that $Z_t \frac{Y_t}{R_t}$ is indeed a martingale:
-
-$$Z_t \frac{Y_t}{R_t} = S_0 \exp\left(-\frac{1}{2}(\sigma - \kappa)^2 t + (\sigma - \kappa)B_t\right)\,.$$
-
-Therefore this is a lognormal random variable and taking expectations gives:
-
-$$\mathbb{E}\left[Z_t \frac{Y_t}{R_t}\right] = S_0\,.$$
-
-#### Dividend Reinvested Stock as Numeraire
-
-When using the stock as numeraire, we need the process $\frac{R_t}{Y_t}$ to be a martingale. Following similar analysis with Girsanov's Theorem, we find that under the stock numeraire measure:
-
-$$\mathrm{d}Y_t = (r + \sigma^2) Y_t \,\mathrm{d}t + \sigma V_t \,\mathrm{d}B_t^Y\,.$$
-
-where $B_t^Y = B_t^R - \sigma t$ is a Brownian motion under the dividend reinvested stock numeraire measure.  It then follows 
-$$\frac{R_t}{Y_t} = \frac{R_0}{S_0} \exp\left(-\frac{1}{2} \sigma^2 t - \sigma B_t^Y \right)\,, $$
-
-which is an exponential martigale.
 
 ## Derivation of the Black-Scholes Formula
 
@@ -126,7 +84,11 @@ $$d_2 = \frac{\log(S_t/K) + (r - q - \frac{\sigma^2}{2})(T-t)}{\sigma\sqrt{T-t}}
 
 #### Share Digital Options
 
-For the share digital paying $S_T \mathbf{1}_{\{S_T > K\}}$, we use the dividend reinvested stock as numeraire.  We have 
+For the share digital paying $S_T \mathbf{1}_{\{S_T > K\}}$, we use the dividend reinvested stock, $Y_t$ as numeraire.  
+
+
+
+We have 
 
 $$S_T  = e^{-q T} Y_T\,; $$
 therefore,
@@ -201,7 +163,7 @@ The following interactive tool allows you to explore how the Black-Scholes formu
 **Black-Scholes Explorer.** This interactive calculator shows how call and put option prices vary with the underlying parameters. Notice how the option prices change smoothly with the stock price, and observe the effects of time-to-maturity and volatility on option values.
 :::
 
-## Replication and Delta Hedging
+## Replication and Delta Hedging {#sec-s_deltahedging}
 
 The Black Scholes formula can also be derived from a no-arbitrage argument since we can replicate option payoffs through dynamic trading. Following Merton's argument, we construct a portfolio holding $\delta_t$ shares of stock and $\alpha_t$ units of the risk-free asset, with value:
 
@@ -227,7 +189,9 @@ which gives the equation
 $$r W_t = \frac{\partial C}{\partial t} + \frac{\partial C}{\partial S}(r-q) S_t+\frac{1}{2} \frac{\partial^2 C}{\partial S^2} \sigma^2 S_t^2$$
 with a boundary condition $W_T = (S_T-K)^{+}$.  However, no-arbitrage suggests $W_t = C(t,S_t)$, which gives us the partial differential equation
 $$r C = \frac{\partial C}{\partial t} + \frac{\partial C}{\partial S} (r-q) S+\frac{1}{2} \frac{\partial^2 C}{\partial S^2} \sigma^2 S^2$$
-with a boundary condition $C(T,S_T)= (S_T - K)^{+}$.  This is a partial differential equation and a fairly tedious set of calcuations show the Black Scholes formula is a solution (in fact it is the only positive solution).  Close observation of the right hand side we see this is the drift term of Ito expansion for $C$ if we work in the risk-neutral probability.  The right hand side then says in the risk-neutral probability, the call option earns the risk free return.
+with a boundary condition $C(T,S_T)= (S_T - K)^{+}$.  This is a partial differential equation and a fairly tedious set of calcuations show the Black Scholes formula is a solution (in fact it is the only positive solution).  Close observation of the right hand side we see this is the drift term of Ito expansion for $C$ if we work in the risk-neutral probability.  The right hand side then says in the risk-neutral probability, the call option earns the risk free return. This analysis also gives another interpretation of the Black Scholes formula
+$$C_t= S_t N(d_1) - e^{-r(T-t)} K N(d_2)$$
+The first term on the righthand side of the equation corresponds to the value of the shares of stock in the replicating portfolio and the second term corresponds to the amount borrowed in the replicating portfolio.  
 
 However, there is nothing special about a call option.  The same argument will apply for any European style option.  The only difference is the boundary condition. 
 
@@ -253,6 +217,282 @@ This PDE has several important interpretations:
 3. **Hedging condition**: The drift term equals the risk-free return when perfectly hedged
 
 The Black-Scholes formula satisfies this PDE with the appropriate boundary conditions for calls and puts.
+
+
+
+## Greeks
+
+The sensitivities of option values to various inputs are called Greeks. From the Black-Scholes formula:
+
+#### Delta ($\delta$)
+The sensitivity to stock price changes:
+
+$$\delta_{call} = e^{-q(T-t)} N(d_1)\,.$$
+$$\delta_{put} = -e^{-q(T-t)} N(-d_1)\,.$$
+
+#### Gamma ($\Gamma$)
+The rate of change of delta:
+
+$$\Gamma = \frac{e^{-q(T-t)} n(d_1)}{S \sigma \sqrt{T-t}}\,,$$
+
+where $n(\cdot)$ is the standard normal density. Gamma is the same for calls and puts.
+
+#### Theta ($\Theta$)
+The time decay (using $\partial/\partial(-T)$ so positive theta means value increases as time passes):
+
+$$\Theta_{call} = -\frac{e^{-q(T-t)} S n(d_1) \sigma}{2\sqrt{T-t}} + q e^{-q(T-t)} S N(d_1) - r e^{-r(T-t)} K N(d_2)\,.$$
+
+#### Vega ($\mathcal{V}$)
+The sensitivity to volatility:
+
+$$\mathcal{V} = e^{-q(T-t)} S n(d_1) \sqrt{T-t}\,.$$
+
+#### Rho ($\rho$)
+The sensitivity to interest rates:
+
+$$\rho_{call} = (T-t) e^{-r(T-t)} K N(d_2)\,.$$
+
+#### Interactive Greeks Explorer
+
+The Greeks measure how option prices change with respect to various parameters. The following interactive tool lets you visualize how the Greeks behave across different stock prices and parameter values.
+
+::: {#fig-bs-greeks} 
+<iframe height="750" width="100%" src="https://greeks.koyeb.app/"></iframe>
+
+**Black-Scholes Greeks Explorer.** This tool shows how delta, gamma, theta, vega, and rho vary with the stock price and other parameters. Pay particular attention to how gamma peaks near the strike price and how theta becomes more negative as expiration approaches.
+:::
+
+## Theta and Gamma in Delta Hedges
+
+The relationship between theta and gamma provides deep insight into option hedging. Consider a delta-hedged portfolio (short call, long $\delta$ shares). From the fundamental PDE and our Greeks:
+
+$$\Theta + \frac{1}{2} \Gamma \sigma^2 S^2 = r C - (r - q) S \delta\,.$$
+
+In continuous time, the portfolio change is
+
+$$-\Theta \,\mathrm{d}t - \frac{1}{2} \Gamma \sigma^2 S^2 \,\mathrm{d}t + q \delta S \,\mathrm{d}t + (C - \delta S) r \,\mathrm{d}t\,.$$
+
+These terms exactly cancel—the time decay and dividends received offset losses from being short gamma and interest payments. This perfect cancellation only holds with continuous rebalancing.
+
+With discrete rebalancing, the hedge is imperfect. The portfolio is short gamma, meaning it loses money when the stock moves significantly between rebalances. This loss is approximately:
+
+$$\frac{1}{2} \Gamma (\Delta S)^2\,,$$
+
+where $\Delta S$ is the stock price change. The hedging error increases with:
+
+- Larger gamma (near the strike at expiration)
+- Higher volatility
+- Longer time between rebalances
+
+#### Discretely Rebalanced Delta Hedges
+
+The theoretical analysis above assumes continuous rebalancing, but in practice, hedging must be done at discrete intervals. This introduces hedging error that we can analyze through simulation.
+
+#### The Discrete Hedging Problem
+
+Consider a delta hedge that is rebalanced at discrete times $0 = t_0 < t_1 < \cdots < t_N = T$ with $\Delta t = T/N$. Between rebalancing dates, the hedge portfolio consists of:
+
+- Short position in the option
+- Long $\delta_{t_i}$ shares of stock (where $\delta_{t_i}$ is computed at the last rebalancing date)
+- Cash position to finance the hedge
+
+The key insight from the analysis in @sec-s_deltahedging is that perfect continuous hedging relies on the relationship:
+
+$$-\Theta \,\mathrm{d} t - \frac{1}{2}\Gamma \sigma^2S^2\,\mathrm{d} t+ q \delta S\,\mathrm{d} t+(C-\delta S)r\,\mathrm{d} t = 0\,.$$
+
+With discrete rebalancing, this balance is disrupted. The portfolio gains and losses come from:
+
+1. **Time decay**: $-\Theta \Delta t$ (predictable, typically positive for short option)
+2. **Gamma exposure**: $-\frac{1}{2}\Gamma (\Delta S)^2$ (stochastic losses when short gamma)
+3. **Interest and dividends**: Financing costs and dividend income
+4. **Delta drift**: Changes in delta between rebalancing dates
+
+Suppose we set up a delta hedge at date $0$ for a call option that we have sold.  We sell the call at the Black-Scholes price $C(0, S_0)$.  We use the proceeds plus borrowed funds to buy $\delta_0 = \e^{-qT}\mathrm{N}(d_1)$ shares, where $d_1$ is the parameter at date 0 for the Black-Scholes call value and delta.   We rebalance the hedge at each date $t_1, \ldots, t_n$, holding the short call position until it matures at date $T$.  Rebalancing means that we trade to re-establish the delta hedge based on the Black-Scholes call delta at that date, buying shares when the delta has gone up and selling shares when the delta has fallen.  Let $\delta_t$ denote the Black-Scholes delta at each $t$ and let $C_t denote the Black-Scholes call value $C(t, S_t)$.  
+
+Our cash position at date 0 is $ - (\delta_0S_0 - C_0$.  The cash position changes at each subsequent date due to (i) interest earned/paid on the cash position during the period, (ii) dividends received during the period on the shares owned, and (iii) cash paid or received when buying or selling stock to re-establish the delta hedge.  Approximate the interest on cash in each time period as $r\cdot \Delta t$ per dollar of cash at the beginning of the period.  Approximate the dividends received in each time period as $q \cdot \Delta t$ per dollar value of stock at the beginning of the period.  
+
+The portfolio starts at a zero value at date $0$, because we used none of our own funds to put it on.  Let $V_t$ denote the portfolio value at date $t$.  The change in the portfolio value from $t_i$ to $t_{i+1}$ for each $i$ is
+$$V_{t_{i+1}} - V_{t_i} = - (\delta_{t_i}S_{t_i} - V_{t_i})r\Delta t + \delta_{t_i}S_{t_i}q\Delta t + \delta_{t_i}
+(S_{t_{i+1}} - S_{t_i}) - (C_{t_{i+1}} - C_{t_i})\,.$$
+The terms on the right-hand side are (i) interest paid on borrowed funds, (ii) dividends received on shares owned, (iii) gain or loss on the shares owned, (iv) change in the value of the short call position.  The following figure simulates stock price paths and computes the portfolio value at date $t_{n+1}=T$.  Of course, the call value at date $T$ is its intrinsic value.
+
+
+To compute the real-world distribution of gains and losses from a discretely-rebalanced delta hedge, we input the expected rate of return $\mu$.  We consider adjusting the hedge at dates $0=t_0<t_1<\cdots<t_N=T$, with $t_i-t_{i-1}=\Delta t = T/N$ for each $i$.  The changes in the natural logarithm of the stock price between successive dates $t_{i-1}$ and $t_i$ are simulated as
+$$\Delta \log S = \left(\mu-q-\frac{1}{2}\sigma^2\right)\,\Delta t + \sigma\,\Delta B\; ,$$
+where $\Delta B$ is normally distributed with mean zero and variance $\Delta t$.  The random variables $\Delta B$ are simulated as standard normals multiplied by
+$\sqrt{\Delta t}$.  We begin with the portfolio that is short a call, long $\delta$ shares of the underlying, and short $\delta S-C$ in cash.  After the stock price changes, say from $S$ to $S'$, we compute the new delta $\delta'$.  The cash flow from adjusting the hedge is $(\delta-\delta')S'$.  Accumulation (or payment) of interest on the cash position is captured by the factor $e^{r\Delta t}$.  Continuous payment of dividends is modelled similarly: the dividends earned during the period $\Delta t$ is taken to be $\delta S\left(e^{q\Delta t}-1\right)$.  The cash position is adjusted due to interest, dividends, and the cash flow from adjusting the hedge.  At date $T$, the value of the portfolio is the cash position less the intrinsic value of the option.
+
+To describe the distribution of gains and losses, we also compute percentiles of the distribution.  The percentile is calculated with the Python program.^[If numsims = 11 and pct =0.1, the percentile function returns the second lowest element in the series.  The logic is that 10\% of the numbers, excluding the number returned, are below the number returned---i.e., 1 out of the other 10 are below---and 90\% of the others are above.  In particular, if pct = 0.5, the percentile function returns the median.  When necessary, the function interpolates; for example, if numsims = 10 and pct=0.1, then the number returned is an interpolation between the lowest and second lowest numbers.] 
+
+
+
+#### Simulation of Discrete Hedging
+
+The following code simulates the performance of discretely rebalanced delta hedges. It runs 100,000 simulations of a stock price path, with trading to an updated delta hedge each period.^[The implementation uses vectorized calculations to improve performance (typically much faster than pure Python loops).]  
+
+```{python}
+import numpy as np
+# from bsfunctions import *
+import matplotlib.pyplot as plt
+import time
+from math import pow, exp, sqrt
+from scipy import stats
+# incs = np.genfromtxt('incs.csv',delimiter=",",skip_header=1)
+def blackscholes(S0, K, r, q, sig, T, call = True):
+#    '''Calculate option price using B-S formula.
+
+#    Args:
+#        S0 (num): initial price of underlying asset.
+#        K (num): strick price.
+#        r (num): risk free rate.
+#        q (num): dividend yield
+#        sig (num): Black-Scholes volatility.
+#        T (num): maturity.
+#        call (bool): True returns call price, False returns put price.
+
+#    Returns:
+#        num
+#    '''
+    d1 = (np.log(S0/K) + (r -q + sig**2/2) * T)/(sig*np.sqrt(T))
+    d2 = d1 - sig*np.sqrt(T)
+#     norm = sp.stats.norm
+    norm = stats.norm
+    if call:
+        return np.exp(-q*T)*S0 * norm.cdf(d1,0,1) - K * np.exp(-r * T) * norm.cdf(d2,0, 1)
+    else:
+        return np.exp(-q*T)*S0 * -norm.cdf(-d1,0,1) + K * np.exp(-r * T) * norm.cdf(-d2,0, 1)
+
+def blackscholes_delta(S0, K, r, q, sig, T, call = True):
+#    '''Calculate option price using B-S formula.
+
+#    Args:
+#        S0 (num): initial price of underlying asset.
+#        K (num): strick price.
+#        r (num): risk free rate.
+#        q (num): dividend yield
+#        sig (num): Black-Scholes volatility.
+#        T (num): maturity.
+#        call (bool): True returns call price, False returns put price.
+
+#   Returns:
+#        num
+#    '''
+    d1 = (np.log(S0/K) + (r -q + sig**2/2) * T)/(sig*np.sqrt(T))
+    d2 = d1 - sig*np.sqrt(T)
+#     norm = sp.stats.norm
+    norm = stats.norm
+    if type(call) == bool:
+        if call:
+            return np.exp(-q*T)*norm.cdf(d1,0,1)
+        else:
+            return np.exp(-q*T)*norm.cdf(-d1,0,1)
+    else:
+        print("Not a valid value for call")
+
+# parameters
+# number of paths
+# n = incs.shape[1]
+n = 100000
+# number of divisions
+# m = incs.shape[0]
+m = 100
+# interest rate
+r = .1
+# dividend yield
+q=0.0
+# true drift
+mu = .15
+# volatility
+sig = .2
+# Initial Stock Price
+S0 = 42
+# Strike Price
+K = 42
+# Maturity
+T = 0.5
+
+
+# seed for random generator
+seed= 1234
+# define a random generator
+rg = np.random.RandomState(seed)
+# initialize
+
+
+# generate normal random vairables
+dt= T/m
+vol=sig*np.sqrt(dt)
+incs = rg.normal(0,vol,[m,n])
+
+
+tline = np.linspace(0,T,m+1)
+
+
+St = np.zeros((m+1,n))
+#St1 = np.zeros((m+1,n))
+
+V_vec = np.zeros((m+1,n))
+
+delta = np.zeros((m,n))
+
+call= blackscholes(S0,K,r, q, sig,T,call=True)
+
+incs_cumsum =  np.concatenate((np.zeros((1,n)),incs),axis=0).cumsum(axis=0)
+V_vec = np.zeros((m+1,n))
+t_mat =  np.repeat(tline.reshape((m+1,1)), n, axis=1)
+drift_cumsum = (mu -q -0.5*sig**2) * t_mat
+
+St = S0 * np.exp(incs_cumsum + drift_cumsum)
+
+delta = blackscholes_delta(St[:-1,:],K,r, q, sig,T-t_mat[:-1,:])
+
+V_vec[0,:] = call
+
+for i in range(1,m+1):
+    V_vec[i,:] = V_vec[i-1,:] + (np.exp(r*dt)-1) * (V_vec[i-1,:] -delta[i-1,:] * St[i-1,:])+ delta[i-1,:] * (St[i,:]-St[i-1,:])
+
+# Uses actual simulated changes in riskfree and stock price not the dt and dB approximations
+# plot hedging profits
+simulated_delta_hedge= V_vec[m,:] -np.maximum(St[m,:]-K,0)
+plt.scatter(St[m,:],simulated_delta_hedge)
+#plt.scatter(St[m,:],-np.maximum(St[m,:]-K,0)+V_vec[m,:])
+#plt.scatter(St[m,:],V_vec[m,:])
+plt.xlabel('Stock Price at Maturity')
+plt.ylabel('Hedging Error')
+plt.show()
+print("Ninety fifth percentile")
+print(np.percentile(simulated_delta_hedge, 95))
+```
+
+Notice that the largest hedging errors occur when the option expires near the money.  This is beacuse the change in the delta around this point (Gamma) is large.  Decreasing the hedging frequency will generally lead to larger hedging errors.  
+
+## Delta-Gamma Hedging
+
+To attempt to improve the performance of a discretely rebalanced delta hedge, one can use another option to create a portfolio that is both delta and gamma neutral. Being delta neutral means hedged as in the previous section---the portfolio value has no exposure to changes in the underlying asset price. In other words, it means that the derivative of the portfolio value with respect to the price of the underlying (the portfolio delta) is zero. Being gamma neutral means that the delta of the portfolio has no exposure to changes in the underlying price, which is equivalent to the second derivative of the portfolio value with respect to the price of the underlying (the portfolio gamma) being zero. If the delta truly did not change, then there would be no need to rebalance continuously, and hence no hedging error introduced by only adjusting the portfolio at discrete times rather than continuously. However, there is certainly no guarantee that a discretely rebalanced delta/gamma hedge will perform better than a discretely rebalanced delta hedge.
+
+A delta/gamma hedge can be constructed as follows. Suppose we have written (shorted) a call option and we want to hedge both the delta and gamma using the underlying asset and another option, for example, another call option with a different strike. In practice, one would want to use a liquid option for this purpose, which typically means that the strike of the option will be near the current value of the underlying (i.e., the option used to hedge would be approximately at the money).
+
+Let $\delta$ and $\Gamma$ denote the delta and gamma of the written option and let $\delta^*$ and $\Gamma^*$ denote the delta and gamma of the option used to hedge. Consider holding $a$ shares of the stock and $b$ units of the option used to hedge in conjunction with the short option. The delta of the stock is one ($\mathrm{d} S/\mathrm{d} S = 1$), so to obtain a zero portfolio delta we need
+
+$$
+0 = - \delta + a + b\delta^*.
+$$ {#eq-portfoliodelta}
+
+The gamma of the stock is zero ($\mathrm{d}^2 S/\mathrm{d} S^2 = d\,1/\mathrm{d} S = 0$), so to obtain a zero portfolio gamma we need
+
+$$
+0 = - \Gamma + b\Gamma^*\;.
+$$ {#eq-portfoliogamma}
+
+
+Equation @eq-portfoliogamma shows that we should hold enough of the second option to neutralize the gamma of the option we have shorted; i.e.,
+$$
+b= \frac{\Gamma}{\Gamma^*}
+$$
+Equation @eq-portfoliodelta shows that we should use the stock to delta hedge the portfolio of options; i.e.,
+$$
+a=\delta - \frac{\Gamma}{\Gamma^*}\delta^*\;.
+$$
 
 #### Simulating Portfolio Insurance
 
@@ -396,316 +636,6 @@ With $m=100$ rebalancing dates over $T=0.5$ for the parameters chosen the replia
 
 The portfolio insurance rebalancing scheme involves sell stock and buying bonds when the stock price goes down and buying stocks and selling bonds when the stock price goes up.  This can be destabilizing and was identified as a contributor to the 1987 stock market crash.
 
-## Greeks
-
-The sensitivities of option values to various inputs are called Greeks. From the Black-Scholes formula:
-
-#### Delta ($\delta$)
-The sensitivity to stock price changes:
-
-$$\delta_{call} = e^{-q(T-t)} N(d_1)\,.$$
-$$\delta_{put} = -e^{-q(T-t)} N(-d_1)\,.$$
-
-#### Gamma ($\Gamma$)
-The rate of change of delta:
-
-$$\Gamma = \frac{e^{-q(T-t)} n(d_1)}{S \sigma \sqrt{T-t}}\,,$$
-
-where $n(\cdot)$ is the standard normal density. Gamma is the same for calls and puts.
-
-#### Theta ($\Theta$)
-The time decay (using $\partial/\partial(-T)$ so positive theta means value increases as time passes):
-
-$$\Theta_{call} = -\frac{e^{-q(T-t)} S n(d_1) \sigma}{2\sqrt{T-t}} + q e^{-q(T-t)} S N(d_1) - r e^{-r(T-t)} K N(d_2)\,.$$
-
-#### Vega ($\mathcal{V}$)
-The sensitivity to volatility:
-
-$$\mathcal{V} = e^{-q(T-t)} S n(d_1) \sqrt{T-t}\,.$$
-
-#### Rho ($\rho$)
-The sensitivity to interest rates:
-
-$$\rho_{call} = (T-t) e^{-r(T-t)} K N(d_2)\,.$$
-
-#### Interactive Greeks Explorer
-
-The Greeks measure how option prices change with respect to various parameters. The following interactive tool lets you visualize how the Greeks behave across different stock prices and parameter values.
-
-::: {#fig-bs-greeks} 
-<iframe height="750" width="100%" src="https://greeks.koyeb.app/"></iframe>
-
-**Black-Scholes Greeks Explorer.** This tool shows how delta, gamma, theta, vega, and rho vary with the stock price and other parameters. Pay particular attention to how gamma peaks near the strike price and how theta becomes more negative as expiration approaches.
-:::
-
-## Theta and Gamma in Delta Hedges
-
-The relationship between theta and gamma provides deep insight into option hedging. Consider a delta-hedged portfolio (short call, long $\delta$ shares). From the fundamental PDE and our Greeks:
-
-$$\Theta + \frac{1}{2} \Gamma \sigma^2 S^2 = r C - (r - q) S \delta\,.$$
-
-In continuous time, the portfolio change is
-
-$$-\Theta \,\mathrm{d}t - \frac{1}{2} \Gamma \sigma^2 S^2 \,\mathrm{d}t + q \delta S \,\mathrm{d}t + (C - \delta S) r \,\mathrm{d}t\,.$$
-
-These terms exactly cancel—the time decay and dividends received offset losses from being short gamma and interest payments. This perfect cancellation only holds with continuous rebalancing.
-
-With discrete rebalancing, the hedge is imperfect. The portfolio is short gamma, meaning it loses money when the stock moves significantly between rebalances. This loss is approximately:
-
-$$\frac{1}{2} \Gamma (\Delta S)^2\,,$$
-
-where $\Delta S$ is the stock price change. The hedging error increases with:
-
-- Larger gamma (near the strike at expiration)
-- Higher volatility
-- Longer time between rebalances
-
-#### Discretely Rebalanced Delta Hedges
-
-The theoretical analysis above assumes continuous rebalancing, but in practice, hedging must be done at discrete intervals. This introduces hedging error that we can analyze through simulation.
-
-#### The Discrete Hedging Problem
-
-Consider a delta hedge that is rebalanced at discrete times $0 = t_0 < t_1 < \cdots < t_N = T$ with $\Delta t = T/N$. Between rebalancing dates, the hedge portfolio consists of:
-
-- Short position in the option
-- Long $\delta_{t_i}$ shares of stock (where $\delta_{t_i}$ is computed at the last rebalancing date)
-- Cash position to finance the hedge
-
-The key insight from the analysis in @sec-s_deltahedging is that perfect continuous hedging relies on the relationship:
-
-$$-\Theta \,\mathrm{d} t - \frac{1}{2}\Gamma \sigma^2S^2\,\mathrm{d} t+ q \delta S\,\mathrm{d} t+(C-\delta S)r\,\mathrm{d} t = 0\,.$$
-
-With discrete rebalancing, this balance is disrupted. The portfolio gains and losses come from:
-
-1. **Time decay**: $-\Theta \Delta t$ (predictable, typically positive for short option)
-2. **Gamma exposure**: $-\frac{1}{2}\Gamma (\Delta S)^2$ (stochastic losses when short gamma)
-3. **Interest and dividends**: Financing costs and dividend income
-4. **Delta drift**: Changes in delta between rebalancing dates
-
-#### Simulation of Discrete Hedging
-
-The following code simulates the performance of discretely rebalanced delta hedges. It runs 10,000 simulations of a stock price path, with trading to an updated delta hedge each period.^[The implementation uses Numba JIT compilation for significant performance improvements (typically 20-100x speedup compared to pure Python loops).]
-
-```{python}
-#| echo: true
-#| eval: true
-
-import numpy as np
-from scipy.stats import norm
-from numba import jit
-
-def blackscholes(S0, K, r, q, sig, T, call = True):
-    '''Calculate option price using Black-Scholes formula.'''
-    d1 = (np.log(S0/K) + (r -q + sig**2/2) * T)/(sig*np.sqrt(T))
-    d2 = d1 - sig*np.sqrt(T)
-    if call:
-        return np.exp(-q*T)*S0 * norm.cdf(d1,0,1) - K * np.exp(-r * T) * norm.cdf(d2,0, 1)
-    else:
-        return np.exp(-q*T)*S0 * (-norm.cdf(-d1,0,1)) + K * np.exp(-r * T) * norm.cdf(-d2,0, 1)
-
-def blackscholes_delta(S0, K, r, q, sig, T, call = True):
-    '''Calculate option delta using Black-Scholes formula.'''
-    d1 = (np.log(S0/K) + (r -q + sig**2/2) * T)/(sig*np.sqrt(T))
-    if call:
-        return np.exp(-q*T)*norm.cdf(d1,0,1)
-    else:
-        return np.exp(-q*T)*norm.cdf(-d1,0,1)
-
-@jit(nopython=True)
-def norm_cdf_fast(x):
-    """
-    Fast approximation of cumulative normal distribution.
-    Accurate to about 7 decimal places using Abramowitz & Stegun approximation.
-    """
-    # Constants for the approximation
-    a1 =  0.254829592
-    a2 = -0.284496736
-    a3 =  1.421413741
-    a4 = -1.453152027
-    a5 =  1.061405429
-    p  =  0.3275911
-
-    # Save the sign of x
-    sign = 1.0 if x >= 0.0 else -1.0
-    x = abs(x) / np.sqrt(2.0)
-
-    # Abramowitz & Stegun formula
-    t = 1.0 / (1.0 + p * x)
-    y = 1.0 - (((((a5 * t + a4) * t) + a3) * t + a2) * t + a1) * t * np.exp(-x * x)
-
-    return 0.5 * (1.0 + sign * y)
-
-@jit(nopython=True)
-def blackscholes_delta_fast(S, K, r, q, sigma, T):
-    """Fast Black-Scholes delta for call option using Numba."""
-    if T <= 0:
-        return 1.0 if S > K else 0.0
-    d1 = (np.log(S / K) + (r - q + sigma**2 / 2) * T) / (sigma * np.sqrt(T))
-    return np.exp(-q * T) * norm_cdf_fast(d1)
-
-@jit(nopython=True)
-def simulate_single_path(S0, K, r, sigma, q, T, mu, N, drift, vol_dt,
-                        discount, div_factor, delta_0, cash_0, random_normals):
-    """
-    Simulate a single delta hedge path.
-    Optimized with Numba JIT compilation.
-    """
-    dt = T / N
-    log_s = np.log(S0)
-    cash = cash_0
-    s = S0
-    delta = delta_0
-
-    # Rebalancing loop
-    for j in range(1, N):
-        # Stock price evolution
-        log_s += drift + vol_dt * random_normals[j]
-        new_s = np.exp(log_s)
-
-        # New delta for rebalancing
-        time_remaining = T - j * dt
-        new_delta = blackscholes_delta_fast(new_s, K, r, q, sigma, time_remaining)
-
-        # Update cash position: interest + dividends - rebalancing cost
-        cash = (discount * cash +
-               delta * s * div_factor -
-               (new_delta - delta) * new_s)
-
-        s = new_s
-        delta = new_delta
-
-    # Final period
-    log_s += drift + vol_dt * random_normals[N]
-    final_s = np.exp(log_s)
-
-    # Final hedge value
-    final_hedge_value = (discount * cash +
-                       delta * s * div_factor +
-                       delta * final_s)
-
-    # Profit = hedge value - option payoff
-    option_payoff = max(final_s - K, 0.0)
-    return final_hedge_value - option_payoff
-
-@jit(nopython=True)
-def run_all_simulations(S0, K, r, sigma, q, T, mu, M, N, drift, vol_dt,
-                       discount, div_factor, delta_0, cash_0, all_random_normals):
-    """Run all M simulations using Numba JIT."""
-    profits = np.zeros(M)
-
-    for i in range(M):
-        profits[i] = simulate_single_path(
-            S0, K, r, sigma, q, T, mu, N, drift, vol_dt,
-            discount, div_factor, delta_0, cash_0, all_random_normals[i, :]
-        )
-
-    return profits
-
-def simulated_delta_hedge_profit(S0, K, r, sigma, q, T, mu, M, N, pct):
-    """
-    Simulate profits/losses from discretely rebalanced delta hedge.
-    Optimized version using Numba JIT compilation.
-
-    Parameters:
-    S0: initial stock price
-    K: strike price
-    r: risk-free rate
-    sigma: volatility
-    q: dividend yield
-    T: time to maturity
-    mu: expected stock return (actual, not risk-neutral)
-    M: number of simulations
-    N: number of rebalancing periods
-    pct: percentile to return
-    """
-    dt = T / N
-    vol_dt = sigma * np.sqrt(dt)
-    drift = (mu - q - 0.5 * sigma**2) * dt
-    discount = np.exp(r * dt)
-    div_factor = np.exp(q * dt) - 1
-
-    # Initial setup (using scipy for initial values)
-    call_0 = blackscholes(S0, K, r, q, sigma, T, True)
-    delta_0 = blackscholes_delta(S0, K, r, q, sigma, T, True)
-    cash_0 = call_0 - delta_0 * S0
-
-    # Generate all random numbers upfront for better performance
-    np.random.seed(42)
-    all_random_normals = np.random.randn(M, N + 1)
-
-    # Run all simulations using JIT-compiled function
-    profits = run_all_simulations(
-        S0, K, r, sigma, q, T, mu, M, N, drift, vol_dt,
-        discount, div_factor, delta_0, cash_0, all_random_normals
-    )
-
-    return np.percentile(profits, pct * 100)
-
-# Example: Hedge a call option with discrete rebalancing
-S0 = 100      # Initial stock price
-K = 100       # Strike price (at-the-money)
-r = 0.05      # Risk-free rate
-sigma = 0.2   # Volatility
-q = 0.02      # Dividend yield
-T = 0.25      # 3 months to maturity
-mu = 0.12     # Expected stock return
-
-print("Discrete Delta Hedging Analysis")
-print("==============================")
-print(f"Parameters: S0={S0}, K={K}, r={r:.2f}, σ={sigma:.2f}, q={q:.2f}, T={T}")
-print(f"Expected stock return μ={mu:.2f}\n")
-
-# Test different rebalancing frequencies
-rebalancing_frequencies = [3, 13, 63]  
-M = 10000  # Number of simulations
-
-print("Hedging Error Analysis (95th percentile of absolute profits):")
-print("Rebalancing Frequency | Periods | 95th Percentile Error")
-print("-" * 55)
-
-for N in rebalancing_frequencies:
-    # Get both tails of the distribution
-    p95 = simulated_delta_hedge_profit(S0, K, r, sigma, q, T, mu, M, N, 0.95)
-    p5 = simulated_delta_hedge_profit(S0, K, r, sigma, q, T, mu, M, N, 0.05)
-    
-    # Report the larger absolute error
-    max_error = max(abs(p95), abs(p5))
-    
-    freq_name = {3: "Monthly", 13: "Weekly", 63: "Daily"}[N]
-    print(f"{freq_name:<20} | {N:>7} | {max_error:>18.4f}")
-
-print(f"\nNote: Errors should decrease as rebalancing frequency increases.")
-```
-
-## Delta-Gamma Hedging
-
-To attempt to improve the performance of a discretely rebalanced delta hedge, one can use another option to create a portfolio that is both delta and gamma neutral. Being delta neutral means hedged as in the previous section---the portfolio value has no exposure to changes in the underlying asset price. In other words, it means that the derivative of the portfolio value with respect to the price of the underlying (the portfolio delta) is zero. Being gamma neutral means that the delta of the portfolio has no exposure to changes in the underlying price, which is equivalent to the second derivative of the portfolio value with respect to the price of the underlying (the portfolio gamma) being zero. If the delta truly did not change, then there would be no need to rebalance continuously, and hence no hedging error introduced by only adjusting the portfolio at discrete times rather than continuously. However, there is certainly no guarantee that a discretely rebalanced delta/gamma hedge will perform better than a discretely rebalanced delta hedge.
-
-A delta/gamma hedge can be constructed as follows. Suppose we have written (shorted) a call option and we want to hedge both the delta and gamma using the underlying asset and another option, for example, another call option with a different strike. In practice, one would want to use a liquid option for this purpose, which typically means that the strike of the option will be near the current value of the underlying (i.e., the option used to hedge would be approximately at the money).
-
-Let $\delta$ and $\Gamma$ denote the delta and gamma of the written option and let $\delta^*$ and $\Gamma^*$ denote the delta and gamma of the option used to hedge. Consider holding $a$ shares of the stock and $b$ units of the option used to hedge in conjunction with the short option. The delta of the stock is one ($\mathrm{d} S/\mathrm{d} S = 1$), so to obtain a zero portfolio delta we need
-
-$$
-0 = - \delta + a + b\delta^*.
-$$ {#eq-portfoliodelta}
-
-The gamma of the stock is zero ($\mathrm{d}^2 S/\mathrm{d} S^2 = d\,1/\mathrm{d} S = 0$), so to obtain a zero portfolio gamma we need
-
-$$
-0 = - \Gamma + b\Gamma^*\;.
-$$ {#eq-portfoliogamma}
-
-
-Equation @eq-portfoliogamma shows that we should hold enough of the second option to neutralize the gamma of the option we have shorted; i.e.,
-$$
-b= \frac{\Gamma}{\Gamma^*}
-$$
-Equation @eq-portfoliodelta shows that we should use the stock to delta hedge the portfolio of options; i.e.,
-$$
-a=\delta - \frac{\Gamma}{\Gamma^*}\delta^*\;.
-$$
-
 ## Implied Volatilities
 
 While all other Black-Scholes inputs are observable, volatility must be estimated. Given an option's market price, we can invert the Black-Scholes formula to find the implied volatility—the $\sigma$ that produces the observed price.
@@ -755,15 +685,13 @@ c) Explain why delta hedging a short digital position near expiration and near t
 d) What happens to the digital delta as time to expiration approaches zero?
 :::
 
-::: {#digital puts}
+::: {#exr-digital-puts}
 The following two questions can be answered in two ways.
 
-What is the vaule of a derivative security which pays 
-$$\mathbf{1}_{\{S_T <K\}}\,.$$
-
-What is the value of a derivative security which pays
-$$ S_T \mathbf{1}_{\{S_T <K\}}\,.$$
-
+a) What is the vaule of a derivative security that pays 
+$\mathbf{1}_{\{S_T <K\}}$?
+b) What is the value of a derivative security that pays
+$ S_T \mathbf{1}_{\{S_T <K\}}$?
 :::
 
 #### Change of Numeraire and Girsanov's Theorem
@@ -840,15 +768,15 @@ d) What are the practical limitations of this "perfect" hedge?
 
 #### The Fundamental PDE and Replication
 
-:::{#PDE00}
+::: {#exr-PDE00}
 Show that the stock price and the boond price satisfy the fundamental PDE with the appropriate boundary condition.
 :::
 
-:::{#PDE0}
+::: {#exr-PDE0}
 Show that the share digital and cash digital prices satisfy the fundamenatl PDE with the appropriate boundary condition.
 :::
 
-:::{#PDE1}
+::: {#exr-PDE1}
 Use risk neutral valuation to find the value of a derivative security which pays $\ln(S_T)$.  Verify your value satisfies the fundamental PDE with the appropriate boundary condition. What is the replicating portfolio? Is this option harder to hedge than a standard option?  Why or why not?
 :::
 
@@ -861,12 +789,14 @@ c) Verify both satisfy the fundamental PDE: $rV = \frac{\partial V}{\partial t} 
 d) Compare the hedging difficulty (gamma exposure) of these payoffs to standard options.
 :::
 
-:::{#digital option replication}
-Modify the code which simulates portfolio insurance to simulate replication of a cash digital option.  Where do the largest errors tend to occur?
+
+
+::: {#exr-digital-option-replication}
+Modify the code which simulates delta hedging to simulate replication of a cash digital option.  Where do the largest errors tend to occur? Compare the hedging difficulty (gamma exposure) of these payoffs to standard options.
 :::
 
-:::{#option replication and transaction costs}
-Modify the code which simulates portfolio insurance to incur a transaction cost. One model has ask price $1.01 S_t$ and and bid price share $0.99 S_t$.  Another model has ask price $S_t +.005$ and bid price $S_t - .005$.  Try different rebalancing frequencies.  What rebalancing frequency gives the best hedging?  Where do the largest errors tend to occur?
+::: {#exr-option-replication-with-costs}
+Modify the code which simulates delta hedging to incur a transaction cost. One model has ask price $1.01 S_t$ and and bid price share $0.99 S_t$.  Another model has ask price $S_t +.005$ and bid price $S_t - .005$.  Try different rebalancing frequencies.  What rebalancing frequency gives the best hedging?  Where do the largest errors tend to occur?
 :::
 
 #### Discrete Hedging and Practical Implementation
@@ -879,7 +809,6 @@ b) Analyze how hedging errors scale with volatility and time to expiration
 c) Study the impact of transaction costs: assume 0.1% bid-ask spread on each rebalance
 d) Find the optimal rebalancing frequency that minimizes total cost (hedging error + transaction costs)
 :::
-
 
 
 ::: {#exr-gamma-scalping}
