--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ This is an incomplete and in-progress draft of a python-based introduction to de
 - In addition to figures that display hover data, there are also several figures where you can see how results depend on parameters by varying the parameters with sliders or dropdown menus, etc.  
 - There is an OpenAI-powered chatbot that answers questions using the book as a source and that provides references to the parts of the book where it found the answers.  Click the chat icon below the book title on the top left.  Like any chatbot, this one can make mistakes, so check its answers with the sources in the book that it provides.  
 - The icon to the right of the GitHub icon allows you to toggle between light and dark modes.
-- The book is [Hypothesis](https://web.hypothes.is/) enabled.  Click the icons at the top right to log in or sign up and to create annotations or to highlight text.  The annotations and highlights will be visible to you in subsequent visits to the book once you log in to your Hypothesis account.  We prefer that you do not post annotations or highlights to the Public account.
+- The book is [Hypothesis](https://web.hypothes.is/){target="_blank"} enabled.  Click the icons at the top right to log in or sign up and to create annotations or to highlight text.  The annotations and highlights will be visible to you in subsequent visits to the book once you log in to your Hypothesis account.  We prefer that you do not post annotations or highlights to the Public account.
 
 
 
